--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -1,5 +1,5 @@
 {
-    "http":"http://103.99.178.223:7723/game/",
+    "http":"https://103.99.178.223:7723/game/",
     "httpDebug": "",
     "version":"0.1",
     "isDebug": false,
